--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - database/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
