--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - database/
+    - assets/database/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
